correct vault title on mobile

--- a/app/earn/[...vault]/header/first-line/price-chart.module.scss
+++ b/app/earn/[...vault]/header/first-line/price-chart.module.scss
@@ -7,7 +7,7 @@
   position: relative;
 
   @media (max-width: $screen-mobile) {
-    margin-top: var(--margin-700);
+    margin-top: var(--margin-300);
   }
 }
 
